# applied

./: .env.example  .gitignore  Dockerfile  agent_notes.md  applier_agent_test.py  check_db.py  debug_browser.py  debug_browser_stop.py  deploy.sh  docker-compose.yml  inspect_browser.py  main.py  matcher_agent_test.py  pyproject.toml  readme.md  requirements.txt  researcher_agent_test.py  schema.sql  test.py  verifier_test.py  verify_chat_persistence.py  verify_libs.py
.agent/rules/: applied-project-rules.md
.github/workflows/: agent_runner.yml  apply_agent.yml  research_agent.yml
agents/: applier.py  matcher.py  researcher.py
app/: cli.py
app/agents/: applier.py  chat_agent.py  google_researcher.py  researcher.py  verifier.py
app/api/: agents.py  auth.py  chat.py  leads.py  profile.py  uploads.py  worker.py
app/mcp/: browser_server.py  mcp_bridge.py  supabase_server.py
app/services/: agent_runner.py  browser_resolver.py  github.py  log_stream.py  supabase_client.py  task_manager.py
app/utils/: resume_parser.py
static/: index.html  jobs.html  login.html  profile.html  script.js  style.css
tests/: applier_agent_test.py  google_researcher_test.py  manual_search_test.py  reproduce_profile_update.py  researcher_agent_test.py  resume_parser_test.py  sanity_check_overhaul.py  test_client_fix.py  test_db_optimization.py  test_leads_cache.py  test_parser_transformation.py  verify_search_stability.py
utils/: password_generator.py  resume_parser.py
