[project]
name = "applied"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "browser-use>=0.11.2",
    "fastapi>=0.128.0",
    "filetype>=1.2.0",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=4.1.3",
    "mcp>=1.25.0",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "supabase>=2.27.1",
    "uvicorn>=0.40.0",
]
